infra/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v3.5.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          command: ["/bin/bash", "-c"]
          args:
            - |
              pip install psycopg2-binary boto3 && \
              mlflow server \
                --backend-store-uri=${BACKEND_STORE_URI} \
                --default-artifact-root=${ARTIFACT_ROOT} \
                --host=0.0.0.0 \
                --port=5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: mlflow
